--- a/django_auth/users/static/users/css/style.css
+++ b/django_auth/users/static/users/css/style.css
@@ -3,17 +3,17 @@ body {
 	font-family: 'Noto Sans', sans-serif;
 	font-size: 16px;
 	line-height: 1.4;
-	color: #000;
+	color: #f5f5f5;
 	min-width: 320px;
 	overflow-x: hidden;
 	height: auto;
-    background-color: #ADD8E6;
+    background-color: #242933;
 }
 .navbar {
     width: 100%;
     height: 70px;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, .1);
-    background-color: #B0C4DE;
+    background-color: #2e3440;
 }
 .navbar .container{
     height: inherit;
@@ -30,10 +30,12 @@ body {
 }
 .navbar-menu li{
     dispLay: inline-block;
+    border: 2px solid #4682B4;
+    background: #2e3440;
 }
 .navbar-menu li a{
     dispLay: inline-block;
-    color: #000;
+    color: #f5f5f5;
     opacity: 1;
     padding: 10px;
     transition: all .07s ease-in-out;
@@ -41,7 +43,7 @@ body {
 
 .navbar-menu li a:hover{
     opacity: 1;
-    color: Green;
+    color: #88b1bd;
 }
 
 .navbar-wrap{
@@ -57,8 +59,8 @@ body {
     font-weight: 700;
     font-size: 30px;
     text-decoration: none;
-    color: #000;
+    color: #f5f5f5;
 }
 .navbar-brand:hover{
-    color: green;
+    color: #88b1bd;
 }
