--- a/django_auth/users/templates/registration/login.html
+++ b/django_auth/users/templates/registration/login.html
@@ -1,7 +1,8 @@
-{% block title %}Login{% endblock %}
+{% extends 'users/basa.html' %}
+{% block title %}Логин{% endblock %}
 
 {% block content %}
-  <h2>Login</h2>
+  <h2>Логин</h2>
 
     <form method="post">
       {% csrf_token %}
@@ -9,7 +10,7 @@
         {{ form.as_p }}
         <tr>
           <td>&nbsp;</td>
-          <td><input type="submit" value="Submit"></td>
+          <td><input type="submit" value="Войти"></td>
         </tr>
       </table>
     </form>
