--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -1,46 +1,9 @@
-{% load static %}
+{% extends 'users/basa.html' %}
 
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta <="UTF-8">
-	<meta <="viewport" content="width=device-width, initial-scale=1.0">
-	<title>{% block title %}{% endblock %}</title>
+{% block title %}Главная{% endblock %}
 
-	<!-- Bootstrap reboot (для сброса стилей) -->
-	<link rel="stylesheet" href=" {% static 'css/bootstrap-reboot.min.css' %}">
-    <link rel="stylesheet" href=" {% static 'users/css/style.css' %}">
+{% block content %}
+    <h1 align="center">Привет, {{ user.username|default:'Гость' }}</h1>
+    <p align="center"> Добро пожаловать на сайт</p>
+{% endblock %}
 
-	<!-- Bootstrap сетка -->
-	<link rel="stylesheet" href=" {% static 'css/bootstrap-grid.min.css' %}">
-
-	<!-- Шрифты с Google Fonts -->
-	<link rel="preconnect" href="https://fonts.gstatic.com">
-	<link href="https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,400&display=swap" rel="stylesheet">
-
-  </head>
-  <body>
-      <nav class="navbar">
-        <div class="container">
-         <a href="{% url 'home' %}" class="navbar-brand">Игра</a>
-          <div class="navbar-wrap">
-              <ul class="navbar-menu">
-                <li>{% if user.is_authenticated %}
-                  <a href="{% url 'logout' %}">Выйти</a>
-                </li>
-                <li>
-                  {% else %}
-                    <a href="{% url 'signup' %}">Регистрация</a>
-                </li>
-                <li>
-                  <a href="{% url 'login' %}">Войти</a>
-                {% endif %}
-                </li>
-              </ul>
-          </div>
-        </div>
-      </nav>
-      <h1 align="center">Привет, {{ user.username|default:'Гость' }}</h1>
-      <p align="center"> Добро пожаловать на сайт</p>
-    </body>
-</html>
