--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -10,7 +10,7 @@
  <body>
 <center>
  <canvas id="canvas" width="288" height="512"></canvas>
- <script type="text/javascript" src="{% static 'js/game.js' %}"></script>
+ <script type="text/javascript" src="{% static 'js/game1.js' %}"></script>
 </center>
  </body>
 
