--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -9,8 +9,10 @@
     <p align="center"> Добро пожаловать на сайт</p>
  <body>
 <center>
+ <input id="restart" type="button" value="Restart"/>
  <canvas id="canvas" width="288" height="512"></canvas>
  <script type="text/javascript" src="{% static 'js/game1.js' %}"></script>
+ <canvas id="restartCanvas" style="display: none;">Restart</canvas>
 </center>
  </body>
 
