--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -13,6 +13,8 @@
  <canvas id="canvas" width="288" height="512"></canvas>
  <script type="text/javascript" src="{% static 'js/game1.js' %}"></script>
  <canvas id="restartCanvas" style="display: none;">Restart</canvas>
+ <div id="score"></div>
+ <button type="button" onclick="scr()">Вывести счет</button>
 </center>
  </body>
 
