Вывод счета на страницу
Вывод последних 5 игр пользователя на страницу

--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -9,7 +9,7 @@
     <p align="center"> Добро пожаловать на сайт</p>
     <p id="user">{{ user.username }}</p>
  <body>
- <div id="text">Последние игры</div>
+ <div id="text">Последние игры: </div>
 <center>
  <input id="restart" type="button" value="Restart"/>
  <canvas id="canvas" width="288" height="512"></canvas>
