--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -10,6 +10,16 @@
     <p id="user">{{ user.username }}</p>
  <body>
  <div id="text">Последние игры: </div>
+ <table id="leaderboard">
+     <thead>
+     <tr>
+         <th>Имя игрока</th>
+         <th>Счет</th>
+     </tr>
+     </thead>
+     <tbody>
+     </tbody>
+ </table>
 <center>
  <input id="restart" type="button" value="Restart"/>
  <canvas id="canvas" width="288" height="512"></canvas>
