--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -10,12 +10,13 @@
     <p id="user">{{ user.username }}</p>
  <body>
  <div id="text">Последние игры: </div>
+ <h1>Таблица лидеров</h1>
  <table id="leaderboard">
-     <thead>
-     <tr>
-         <th>Имя игрока</th>
-         <th>Счет</th>
-     </tr>
+    <thead>
+    <tr>
+        <th>Имя игрока</th>
+        <th>Счет</th>
+    </tr>
      </thead>
      <tbody>
      </tbody>
