--- a/django_auth/users/static/users/css/style.css
+++ b/django_auth/users/static/users/css/style.css
@@ -9,6 +9,14 @@ body {
 	height: auto;
     background-color: #242933;
 }
+table {
+    border-collapse: collapse;
+}
+th, td {
+    border: 1px solid white;
+    padding: 8px;
+    text-align: left;
+}
 .navbar {
     width: 100%;
     height: 70px;
