переделана кнопка рестарт

--- a/django_auth/users/templates/users/home.html
+++ b/django_auth/users/templates/users/home.html
@@ -32,10 +32,15 @@ th, td {
      <tbody>
      </tbody>
  </table>
- <input id="restart" type="button" value="Restart"/>
+ <img src="static/img/restart.png" id="restartBtn" style="
+    width: 40px;
+    height: 40px;
+    position: absolute;
+    left: 1000px;
+    top: 280px;
+"/>
  <canvas id="canvas" width="288" height="512"></canvas>
  <script type="text/javascript" src="{% static 'js/game1.js' %}"></script>
- <canvas id="restartCanvas" style="display: none;">Restart</canvas>
 </center>
 
  </body>
